# sentinel

./: .gitignore  ARCHITECTURE.md  README.md  cookies.txt  login.html  pyproject.toml  requirements.txt
config/: default.yaml
src/sentinel/: __init__.py  cli.py  crawler.py  logging_setup.py  models.py  reporter.py
src/sentinel/browser/: __init__.py  playwright_engine.py
src/sentinel/core/: __init__.py  config.py  context.py  engine.py  http_client.py  plugin_manager.py  scope.py  session_manager.py
src/sentinel/plugins/: __init__.py  base.py  cors.py  headers.py  redirect.py  sqli.py  xss.py
tests/: test_integration.py  test_units.py
